--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port = 9001
 # for https
 server.forward-headers-strategy=framework 
 
-spring.application.name=StudentCRUD
+spring.application.name=demo
 spring.datasource.url=jdbc:mysql>//localhost:3306/skill_barter?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Amypo
