--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=demo
 
 server.port=9001
-server.forward-headers-strategy=framework 
+server.forward-headers-strategy=framework
 
-spring.datasource.url=jdbc:mysql://localhost:3306/skill_barter?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/skill_barter?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=Amypo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -12,3 +12,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
