--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port = 9001
 server.forward-headers-strategy=framework 
 
 spring.application.name=demo
-spring.datasource.url=jdbc:mysql>//localhost:3306/skill_barter?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/skill_barter?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Amypo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
