--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=demo
 server.port=9001
 server.forward-headers-strategy=framework
 
-spring.datasource.url=jdbc:mysql://localhost:3306/skill_barter?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/skill_demo?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Amypo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
