--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 	<groupId>com.example</groupId>
 	<artifactId>demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>skill-barter-platform</name>
-	<description>Skill Barter Matchmaking Platform</description>
+	<name>skill-demo-platform</name>
+	<description>Skill demo Matchmaking Platform</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
