--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,14 @@
     </properties>
 
     <dependencies>
+	
+	<dependency>
+    <groupId>jakarta.servlet</groupId>
+    <artifactId>jakarta.servlet-api</artifactId>
+    <version>6.0.0</version>
+    <scope>provided</scope>
+    </dependency>
+
         <!-- Spring Web -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
